tooling/nargo_cli/tests/snapshots/execute__tests__references_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "7069394164125402276",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1ZT2sTQRSfJLtttloi9Rv4CTY2MfUgBExbwU8RLLn7AYS9evUiCAUvInjxohcPXrzoxYuIiHjzICLiR7BD38+8/WV2kmZnag19EN5O3tv3b37zZnenYabUEJ7Q2Dh0hsLzetQNaCt3Buoj6PwWnglvKnkrYLIZ+Q1pfyfvXc8c+QWMfzsTmzHrA5sR7OfrYudWMbXPuVjalLHGEO5pH/0umun1llxndE+MuY1Y+/yyI/6mys3SzWJaj1B+YXsU3vbf9bYb3vZV2N4Lb3sC2/vBbXd7F8wxbt+IPWC9NXVVwoDmxpTXJgg4uWRm1y/0Yq6PI+ohj8TMEmQp+TbGvU+0aKzjtrV7p+yyHqhTka+uhfYzFJ7Xo21DdUg9caSke4Xi43oNw8SYbym7hny5em9dPPrmIImTY58xpwmyNeXblRvnaJQO4rZ4fK/ssh6o48iX16aOdSg8r0d9Q7mmjjhSkkG3S/Gtq3ti43GdfJ/jJCpOBsYsj5MbFN+/wIlr/6nbt7QtPHtlZhYTAXMcbFJemiBrK9++l0UXHhH3SffRNYdPHjMuLI2Ksgy6t4WvcG+5xv3DUN2Y5vWPD3Ltm6//LaePK5jTpxXM6fMK5vRliZxMuHzGkXvfDu8XmiDLyLeWbTjqtmidkZP1/VXZZT2OR+8zGen69pndoiyD7l3hZ2GfOQvPDJbwXcOHgWWeJ04yzxpP7QqbPJeW8L2HMXBP+Pk8l31r2Vmb56rvIJaA0ZR07wuPXGvnPK9RbjG+2VnCu4ZLhj7nek/keHzriPsldB8IX+Hn8jwydvqRa9cF/vRZBGplc3qo/tfrLpU4+F7GCfRfK5uP5NqFyVFxzOfFdRgorlfK5mO57pjq/odxVmHPEq8H6D4RjjndIPtDGec1ybUe4GteXZ+q//k5aZG6Qv+lsvlMrjuO+7mu3MebSs51he5z4bHXuquuiSe3hinn1qjIrWFmv4dB9wXlFus81ZUbfNlzJt9a9e0tjCNj3Djib2/z8LmIz3YNn23l89Djc1ScfjzoyegrSTHVC4WJwU6eAwstsY8ewJQoudZ/K2Pd58CTGnFOBuPuZHs8GffHBwe9O2PGrlG14zPSRdYp9yTdg0bFMfedR4X2ubuEz9Dj03pOxT2+M88myaD7U7hdI988vkZF2VezwpclfneA7g/l67vHF+bO6v3y6O0tqLfv0POdT9t5/ANcf7GUGSYAAA==",
  "debug_symbols": "tZrdTis5DIDfpddcJLbj2LzKanVUoBxVqgoqsNIK8e4bEAlnxwFkOr5BU+QvXzueePL3vLnZXT39/rU/3t49bC7/et4c7q63j/u7Y/v0/HKxuTrtD4f9719//nuTXv8AvMU/3G+Prx8fHrenx80lyMVmd7zZXFJq9O3+sNtclvTy98UG0BlPzvjijGdnfHXGizNeZ/EF3+OLLuIxOeOzMx6c8eiMJ2d8ccazM36aX6X3+JyWCUPxAuoEKHmB7AXAC6AXmKY559IJwCVR3AS7ieomxE1M0w3c7xVUWhAluYnsJsBNoJsgN1HcxCflWzuhdUlUNyFuQr0EJzcxL+S536uSy5IAN4FuYl7OYdTbsqwMXNwEu4nqJsRNqJeoyU3Mc84fbzNDgJtAN0FuYppzSZ0QMAS7ieomxE2ol5BpzgW4E7R8f0h2E+Am0E2Qm5jnnHqFE+YlwW6iuglxE+oldJ7zCp2Q5SBUs5sAN4FugtzEPOfaR0uaYUmwm6huQtyEeok2Ap6OkLFP/LT+D7kwoVhrbx6rsmk/B7cPwe1jcPsU3H4Jbp+D26/B7Utw+3pu+5J6yUbJy8qVcwpuPwe3D8Htz/tvlbEEkOk7gfbRAmquRkDRghIt4GhBjRZItECDBZCiBflsgWIaAspGANECjBZQtGC+VJggDQPx1wZKo9pRwmQMHG6o4QYJN2i0Yb7bsaohhxsg3IArGAiHoZAxULihhBs43PBJny4wDFW/MeSPrcLWv4xBwg0abaB0vgGov6PbpXlHUz7fgLU/Fu3S/gY430AffZrsOIMw3EDhhhJtKCtkmjgPA5t1nbLCXVKo3aAgxrBC1dBCw1CWezSZz+9xBbTnoWAyv4HPz0PBMVctSGb+zxBuwHADhRvqCgbhYRDT4+oKz1IdU4FSJ4YVniVJvccVMXuWuUK4AcMNFG74pHrLOPvQFF8bvgh+M/DZBk5j1ZCTojHUcIOEGzTaICv0OMJRNdqAyRhW6HGch4HtSEBW6HFcxzuObV0SPt/Qpjnd0OYjxrBC9c46aiskY9AVxt4lj/FSsftgusKIjHUYWK1hhbG3jAOBJGbMB/O9sJa7Xi5b7sRA8wewTUZGNyUL0U+g+WNCY8bSLrOB5Ce/SX8AzRcwEdLY3rEPJswXJb+D6CdQmUNlrDhCsZDMoYoDMkfVYL48hlh7ctuluXvz1SIkGBCBeWDnyzNYoHeJdmm+3nw9BMs41dkuzY2YL0Ag53EjePH1Xtqnf7an/fbqsHs/XX77dLz+47D547/3u8W58/vT3fXu5um0ez2B/nH4/G2TLrdteEipNdwa/w8=",
  "file_map": {
    "50": {
      "source": "fn main(mut x: Field) {\n    add1(&mut x);\n    assert(x == 3);\n    let mut s = S { y: x };\n    s.add2();\n    assert(s.y == 5);\n    // Regression for #1946: Method resolution error when calling &mut methods with a variable of type &mut T\n    let s_ref = &mut s;\n    s_ref.add2();\n    assert(s.y == 7);\n    // Test that normal mutable variables are still copied\n    let mut a = 0;\n    mutate_copy(a);\n    assert(a == 0);\n    // Test something 3 allocations deep\n    let mut nested_allocations = Nested { y: &mut &mut 0 };\n    add1(*nested_allocations.y);\n    assert(**nested_allocations.y == 1);\n    // Test nested struct allocations with a mutable reference to an array.\n    let mut c = C { foo: 0, bar: &mut C2 { array: &mut [1, 2] } };\n    *c.bar.array = [3, 4];\n    assert(*c.bar.array == [3, 4]);\n    regression_1887();\n    regression_2054();\n    regression_2030();\n    regression_2255();\n    regression_6443();\n    assert(x == 3);\n    regression_2218_if_inner_if(x, 10);\n    regression_2218_if_inner_else(20, x);\n    regression_2218_else(x, 3);\n    regression_2218_loop(x, 10);\n    regression_2560(s_ref);\n}\n\nfn add1(x: &mut Field) {\n    *x += 1;\n}\n\nstruct S {\n    y: Field,\n}\n\nstruct Nested {\n    y: &mut &mut Field,\n}\n\nstruct C {\n    foo: Field,\n    bar: &mut C2,\n}\n\nstruct C2 {\n    array: &mut [Field; 2],\n}\n\nimpl S {\n    fn add2(&mut self) {\n        self.y += 2;\n    }\n\n    fn get_y(self) -> Field {\n        self.y\n    }\n}\n\nfn mutate_copy(mut a: Field) {\n    a = 7;\n}\n// Previously the `foo.bar` in `foo.bar.mutate()` would insert an automatic dereference\n// of `foo` which caused the method to wrongly be mutating a copy of bar rather than the original.\nfn regression_1887() {\n    let foo = &mut Foo { bar: Bar { x: 0 } };\n    foo.bar.mutate();\n    assert(foo.bar.x == 32);\n}\n\nstruct Foo {\n    bar: Bar,\n}\nstruct Bar {\n    x: Field,\n}\n\nimpl Bar {\n    fn mutate(&mut self) {\n        self.x = 32;\n    }\n}\n// Ensure that mutating a variable does not also mutate its copy\nfn regression_2054() {\n    let mut x = 2;\n    let z = x;\n\n    x += 1;\n    assert(z == 2);\n}\n// The compiler was still trying to convert an LValue from an array of structs to struct of arrays indexing,\n// even though this conversion was mostly removed elsewhere.\nfn regression_2030() {\n    let ref = &mut 0;\n    let mut array = [ref, ref];\n    let _ = *array[0];\n    *array[0] = 1;\n}\n\n// The `mut x: &mut ...` caught a bug handling lvalues where a double-dereference would occur internally\n// in one step rather than being tracked by two separate steps. This lead to assigning the 1 value to the\n// incorrect outer `mut` reference rather than the correct `&mut` reference.\nfn regression_2255() {\n    let x = &mut 0;\n    regression_2255_helper(x);\n    assert(*x == 1);\n}\n\nfn regression_2255_helper(mut x: &mut Field) {\n    *x = 1;\n}\n\n// Similar to `regression_2255` but without the double-dereferencing.\n// The test checks that `mem2reg` does not eliminate storing to a reference passed as a parameter.\nfn regression_6443() {\n    let x = &mut 0;\n    regression_6443_helper(x);\n    assert(*x == 1);\n}\n\nfn regression_6443_helper(x: &mut Field) {\n    *x = 1;\n}\n\nfn regression_2218(x: Field, y: Field) -> Field {\n    let q = &mut &mut 0;\n    let q1 = *q;\n    let q2 = *q;\n\n    if x != y {\n        *q1 = 1;\n        // Make sure that we correct load reference aliases through multiple blocks\n        if x != 20 {\n            *q1 = 10;\n            *q2 = 2; // now we'd expect q1 == q2 == 2\n            assert(*q1 == 2);\n        } else {\n            *q2 = 15;\n            assert(*q1 == 15);\n        }\n    } else {\n        *q2 = 20;\n        assert(*q1 == 20);\n    }\n    // Have to assign value to return it\n    let value = *q1;\n    value\n}\n\nfn regression_2218_if_inner_if(x: Field, y: Field) {\n    let value = regression_2218(x, y);\n    assert(value == 2);\n}\n\nfn regression_2218_if_inner_else(x: Field, y: Field) {\n    let value = regression_2218(x, y);\n    assert(value == 15);\n}\n\nfn regression_2218_else(x: Field, y: Field) {\n    let value = regression_2218(x, y);\n    assert(value == 20);\n}\n\nfn regression_2218_loop(x: Field, y: Field) {\n    let q = &mut &mut 0;\n    let q1 = *q;\n    let q2 = *q;\n\n    for _ in 0..1 {\n        if x != y {\n            *q1 = 10;\n            *q2 = 2; // now we'd expect q1 == q2 == 2\n            assert(*q1 == 2);\n        } else {\n            *q2 = 20;\n            assert(*q1 == 20);\n        }\n    }\n    assert(*q1 == 2);\n\n    for _ in 0..1 {\n        for _ in 0..5 {\n            if x != y {\n                *q1 = 1;\n                // Make sure that we correct load reference aliases through multiple blocks\n                if x != 20 {\n                    *q1 = 10;\n                    *q2 = 2; // now we'd expect q1 == q2 == 2\n                    assert(*q1 == 2);\n                }\n            } else {\n                *q2 = 20;\n                assert(*q1 == 20);\n            }\n        }\n        if x != y {\n            *q1 = 1;\n            for _ in 0..5 {\n                // Make sure that we correct load reference aliases through multiple blocks\n                if x != 20 {\n                    *q1 = 10;\n                    *q2 = 2; // now we'd expect q1 == q2 == 2\n                    assert(*q1 == 2);\n                }\n            }\n        } else {\n            *q2 = 20;\n            assert(*q1 == 20);\n        }\n    }\n    assert(*q1 == 2);\n\n    if x != y {\n        for _ in 0..5 {\n            if x != y {\n                *q1 = 1;\n                // Make sure that we correct load reference aliases through multiple blocks\n                if x != 20 {\n                    *q1 = 10;\n                    *q2 = 2; // now we'd expect q1 == q2 == 2\n                    assert(*q1 == 2);\n                }\n            }\n        }\n    } else {\n        *q2 = 20;\n        assert(*q1 == 20);\n    }\n    assert(*q1 == 2);\n}\n// This is more a feature test than a proper regression.\n// Before, we never automatically dereferenced objects in method calls to their value types.\n// Now, we insert as many `*` as necessary to get to `S`.\nfn regression_2560(s_ref: &mut S) {\n    assert(s_ref.get_y() == 7);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/references/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
