tooling/nargo_cli/tests/snapshots/execute__tests__references_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "7069394164125402276",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+VYsU4CQRDdEw44hEA08ROs9wQEY0NhY2NiQmJjTC6Sa7SxsLGRT9dLZsL4GBaEWY1xEzJ37OzMezNv9zgStxwJ2TrcO8VnStbvN3LDWF4FGhrssyCbkT0Q8zVDshnktYw/8cNRpvAzxD/IKGbM+nDMCPF9k+JcLZbxkUs1unQvNcRrWp+fjlted+k6gzUxehux9v5Ywc+5DonrG3A9EPUxwpFLbk5g0XBhzQ1xDDgXH4apW9VmAhjTLXxT8D0BLg2xxrK/RyKug1zdNXw064AXD+yJ7N/UhsO47/Q9Jjmkhhwa9hx8H3DKPNocYmraYzrT8nKeHt23xBzWGHXfUuKg7k+Bl3w2xtY957LUTKivGdTF2fErtbycp6fUdlPvMiUO9s4Dr7ZYE7t3nOvv9y4fcl35GXNBtsp9HsAWwt0UMS4Dfi3FL5ZepmT/g162OUvlMx7xYA0bShw8Z6/J/uZZGvv3C+5D4/ijyLXLWX/y5ZprVdkb8b3UbUo4cC3qhP1fRcxbug6dIZtwzYxwvYiYd3Tdc6vnAe6HwzXxtP3AvvdkuacdsSb2fuBcm+r6IL6Xc9vWlf2fRcyCrrmu8l0R64rvNdIX68q+JdnMreopdl3TALfEfeWWBLjVYI59n4Bb/Qe5ca5Kv7s+71FHzuk6wt++m/S5Tc72HjnbIucskPM7NbDCw2cy+9cXSz8rTYwn3rMWahSfzwAcdTEv/d/pXp6NTnCb7oizHBd5OSjKYlTM58PHArVbDfkf0QdBkCyRTRYAAA==",
  "debug_symbols": "zZrhauMwDMffJZ/3wbIl2eqrHMfotmwUSju67uAYe/dzR+317C4lxAr5Upyi6PdPLCmK44/uqX94f7nf7J73b93q10e33T+uj5v9Lh59fN51D4fNdrt5ub/8uzOnH8Av+7fX9e50+HZcH47dyoa7rt89dSs08eznzbbvVhSHlSEAwtk0DsOl8e+7DkjTOV9zTu58Bklp70fah5H2Ms7empH2MNLejrR3I+2vRw7j+QTr8cb0OvJpeh2X02tJ1/3V6BGXYlO8HXbvvKezrfPCN4ytycbWcKnFL0hLWJAWWY4WZ+bV4l3W8n+gn7TArFrQpioch7bUYhekxc2qhSHPEddacKqWYCS5D1AWX0e67lnXvdd1f72G+eQeDOAt/8LJv4CfVDhkQWLQLEkMzCuGrE3GZMuainZJYty8YgYrGeJkMeJMFoNQ+idl/6zs3yv7v1rNwFiTAXjjUYUml0s0zkxKWlmSGjKLUoNzqxnqEolmVjPYm5GfWQ0J5gIr1UzNHcWDFZZbRDG6rIbKUGDQBlhtgNMG/JC7ZDPAyw0AfK9sgS2bUiZtAGsD/HSAxdSWxKEvAWE6wPkUEXFYXYFMB+B32iOUV+CNNgC0AVYb0GCSkSEDuKymocEtEpuWDuOwXDoMDUqFEGYAUQmYnmhkJc0BOVNdwfQ5IJff1slh+XwNogwQow0AbQA2AATOgFAmmjSIIp/fYsjXgAZRFExKNApQ5oGIMgCMUSeAOuGHih3SmwpExDBhwPiL4CYT2OSVVTbiKgKqE0idwOqEBgmHLpeM2CBVhAYZx5AJXD394z1oQPD52cahJrjphPjtMBHit8OK0KB0g+TKWi8kADRotQlyk0RgK0KDNowlE1hqQoNmO+TPzxiKRu8zHv1ZHzbrh21/3uXw/L57vNj0cPz72hf7H14P+8f+6f3Qn3ZCXGyCOAUlxBVZsD46js7/AQ==",
  "file_map": {
    "50": {
      "source": "fn main(mut x: Field) {\n    add1(&mut x);\n    assert(x == 3);\n    let mut s = S { y: x };\n    s.add2();\n    assert(s.y == 5);\n    // Regression for #1946: Method resolution error when calling &mut methods with a variable of type &mut T\n    let s_ref = &mut s;\n    s_ref.add2();\n    assert(s.y == 7);\n    // Test that normal mutable variables are still copied\n    let mut a = 0;\n    mutate_copy(a);\n    assert(a == 0);\n    // Test something 3 allocations deep\n    let mut nested_allocations = Nested { y: &mut &mut 0 };\n    add1(*nested_allocations.y);\n    assert(**nested_allocations.y == 1);\n    // Test nested struct allocations with a mutable reference to an array.\n    let mut c = C { foo: 0, bar: &mut C2 { array: &mut [1, 2] } };\n    *c.bar.array = [3, 4];\n    assert(*c.bar.array == [3, 4]);\n    regression_1887();\n    regression_2054();\n    regression_2030();\n    regression_2255();\n    regression_6443();\n    assert(x == 3);\n    regression_2218_if_inner_if(x, 10);\n    regression_2218_if_inner_else(20, x);\n    regression_2218_else(x, 3);\n    regression_2218_loop(x, 10);\n    regression_2560(s_ref);\n}\n\nfn add1(x: &mut Field) {\n    *x += 1;\n}\n\nstruct S {\n    y: Field,\n}\n\nstruct Nested {\n    y: &mut &mut Field,\n}\n\nstruct C {\n    foo: Field,\n    bar: &mut C2,\n}\n\nstruct C2 {\n    array: &mut [Field; 2],\n}\n\nimpl S {\n    fn add2(&mut self) {\n        self.y += 2;\n    }\n\n    fn get_y(self) -> Field {\n        self.y\n    }\n}\n\nfn mutate_copy(mut a: Field) {\n    a = 7;\n}\n// Previously the `foo.bar` in `foo.bar.mutate()` would insert an automatic dereference\n// of `foo` which caused the method to wrongly be mutating a copy of bar rather than the original.\nfn regression_1887() {\n    let foo = &mut Foo { bar: Bar { x: 0 } };\n    foo.bar.mutate();\n    assert(foo.bar.x == 32);\n}\n\nstruct Foo {\n    bar: Bar,\n}\nstruct Bar {\n    x: Field,\n}\n\nimpl Bar {\n    fn mutate(&mut self) {\n        self.x = 32;\n    }\n}\n// Ensure that mutating a variable does not also mutate its copy\nfn regression_2054() {\n    let mut x = 2;\n    let z = x;\n\n    x += 1;\n    assert(z == 2);\n}\n// The compiler was still trying to convert an LValue from an array of structs to struct of arrays indexing,\n// even though this conversion was mostly removed elsewhere.\nfn regression_2030() {\n    let ref = &mut 0;\n    let mut array = [ref, ref];\n    let _ = *array[0];\n    *array[0] = 1;\n}\n\n// The `mut x: &mut ...` caught a bug handling lvalues where a double-dereference would occur internally\n// in one step rather than being tracked by two separate steps. This lead to assigning the 1 value to the\n// incorrect outer `mut` reference rather than the correct `&mut` reference.\nfn regression_2255() {\n    let x = &mut 0;\n    regression_2255_helper(x);\n    assert(*x == 1);\n}\n\nfn regression_2255_helper(mut x: &mut Field) {\n    *x = 1;\n}\n\n// Similar to `regression_2255` but without the double-dereferencing.\n// The test checks that `mem2reg` does not eliminate storing to a reference passed as a parameter.\nfn regression_6443() {\n    let x = &mut 0;\n    regression_6443_helper(x);\n    assert(*x == 1);\n}\n\nfn regression_6443_helper(x: &mut Field) {\n    *x = 1;\n}\n\nfn regression_2218(x: Field, y: Field) -> Field {\n    let q = &mut &mut 0;\n    let q1 = *q;\n    let q2 = *q;\n\n    if x != y {\n        *q1 = 1;\n        // Make sure that we correct load reference aliases through multiple blocks\n        if x != 20 {\n            *q1 = 10;\n            *q2 = 2; // now we'd expect q1 == q2 == 2\n            assert(*q1 == 2);\n        } else {\n            *q2 = 15;\n            assert(*q1 == 15);\n        }\n    } else {\n        *q2 = 20;\n        assert(*q1 == 20);\n    }\n    // Have to assign value to return it\n    let value = *q1;\n    value\n}\n\nfn regression_2218_if_inner_if(x: Field, y: Field) {\n    let value = regression_2218(x, y);\n    assert(value == 2);\n}\n\nfn regression_2218_if_inner_else(x: Field, y: Field) {\n    let value = regression_2218(x, y);\n    assert(value == 15);\n}\n\nfn regression_2218_else(x: Field, y: Field) {\n    let value = regression_2218(x, y);\n    assert(value == 20);\n}\n\nfn regression_2218_loop(x: Field, y: Field) {\n    let q = &mut &mut 0;\n    let q1 = *q;\n    let q2 = *q;\n\n    for _ in 0..1 {\n        if x != y {\n            *q1 = 10;\n            *q2 = 2; // now we'd expect q1 == q2 == 2\n            assert(*q1 == 2);\n        } else {\n            *q2 = 20;\n            assert(*q1 == 20);\n        }\n    }\n    assert(*q1 == 2);\n\n    for _ in 0..1 {\n        for _ in 0..5 {\n            if x != y {\n                *q1 = 1;\n                // Make sure that we correct load reference aliases through multiple blocks\n                if x != 20 {\n                    *q1 = 10;\n                    *q2 = 2; // now we'd expect q1 == q2 == 2\n                    assert(*q1 == 2);\n                }\n            } else {\n                *q2 = 20;\n                assert(*q1 == 20);\n            }\n        }\n        if x != y {\n            *q1 = 1;\n            for _ in 0..5 {\n                // Make sure that we correct load reference aliases through multiple blocks\n                if x != 20 {\n                    *q1 = 10;\n                    *q2 = 2; // now we'd expect q1 == q2 == 2\n                    assert(*q1 == 2);\n                }\n            }\n        } else {\n            *q2 = 20;\n            assert(*q1 == 20);\n        }\n    }\n    assert(*q1 == 2);\n\n    if x != y {\n        for _ in 0..5 {\n            if x != y {\n                *q1 = 1;\n                // Make sure that we correct load reference aliases through multiple blocks\n                if x != 20 {\n                    *q1 = 10;\n                    *q2 = 2; // now we'd expect q1 == q2 == 2\n                    assert(*q1 == 2);\n                }\n            }\n        }\n    } else {\n        *q2 = 20;\n        assert(*q1 == 20);\n    }\n    assert(*q1 == 2);\n}\n// This is more a feature test than a proper regression.\n// Before, we never automatically dereferenced objects in method calls to their value types.\n// Now, we insert as many `*` as necessary to get to `S`.\nfn regression_2560(s_ref: &mut S) {\n    assert(s_ref.get_y() == 7);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/references/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
