tooling/nargo_cli/tests/snapshots/execute__tests__regression_2660_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "1202513601319851968",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VTzW7CMAxO05QtQ2jSdt5lu2zSDolI1e6GNF4kAvocfXQUYauWcQFB4osT+cvnzz+p1GQVeMPuSsBswLvHzGfkcqLQS4aYX/AWvCbxOmOxluXNyd+70Fqhvoz61xY4S/YHOQvwuyfg2Y4TP69FEY84/ibFV3Cme4aYZ4jj+RXOlr0pMf+C83Hvgn5Nakv2P+bNPYAtoZdfJDfNryAfnwnqWanz3dLsnbQLeEaMYfkpptR8e/DI3QBfc0WXFmL4lmIXAp+eqZPeKe9CyMFnNMdpbuDXAr5h+A/waU9+4Fzyz9GZaKK5Vuc7VDHNiP9kOk0hnW+El/dxqab/a8b8+bv+1Kdk9Tj1AftDzZA4xX/D/WWmjs2dOocu+mEdh9jG/T7sIu9TMk36lDt/aGO3i533f8Efgm+v5T8C026Sh7EJAAA=",
  "debug_symbols": "ldPLCoMwEAXQf5l1Fnn4qP5KKRI1SiBEiVoo4r83KS2IdHM3gRlOGJLh7tSbdhsb64dpofq+k5s6vdrJx2o/GLXBOmfH5twmng5RfPwya5/KZdVhpTpXjIzvqS54vD1YZ2KPHw9GogT9DfQV5iUHvQC9BL0CfQb6HPTgfiW4XwnuV/7db/nzZXXxioNegF6CXiH+iNVTB6tbZ75RHDbfnZK5vmZzCekcps70WzAprqekpp9QOct4ikl6ZiZYpuKMOOcN",
  "file_map": {
    "50": {
      "source": "global foo: i32 = -1;\n\nfn main(x: i32) {\n    let y = x + foo;\n    assert(y == 0);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
